@@ -2,6 +2,8 @@
 
 	* Fix En Passant handling in white/black commands
 
+	* Fix to HashSize handling
+
 --- 5.06 Released
 
 2003-03-10 Simon Waters <Simon@wretched.demon.co.uk>      
